fead: add window load animation
also fixed adaptive images bug and used prettier for files

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__inner">
+            <div class="header__inner reveal fade-top">
                 <a href="index.html" class="header__title"
                     >K!sbag Design Studio</a
                 >
@@ -54,7 +54,7 @@
         </section>
         <section class="slideshow">
             <div class="container">
-                <div class="slideshow__inner">
+                <div class="slideshow__inner reveal fade-bottom">
                     <div class="slideshow__wrapper">
                         <div class="slideshow__item">
                             <img
@@ -271,6 +271,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./src/js/animation.js"></script>
         <script src="./src/js/index.js"></script>
         <script src="./src/js/slideshow.js"></script>
     </body>
