--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__inner">
+            <div class="header__inner reveal fade-top">
                 <a href="index.html" class="header__title"
                     >K!sbag Design Studio</a
                 >
@@ -54,15 +54,17 @@
         </section>
         <section class="preview">
             <div class="preview__inner">
-                <h1 class="preview__title">
+                <h1 class="preview__title reveal fade-top">
                     Design & Development Solutions for Brands.
                 </h1>
-                <p class="preview__subtitle">Keep it simple</p>
+                <p class="preview__subtitle reveal fade-bottom">
+                    Keep it simple
+                </p>
             </div>
         </section>
         <section class="projects-preview">
             <div class="container">
-                <div class="projects-preview__inner">
+                <div class="projects-preview__inner reveal fade-bottom">
                     <div class="project-preview">
                         <h1 class="project-preview__name">Project Title</h1>
                         <a
@@ -177,6 +179,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./src/js/animation.js"></script>
         <script src="./src/js/index.js"></script>
     </body>
 </html>
