--- a/logos.html
+++ b/logos.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__inner">
+            <div class="header__inner reveal fade-top">
                 <a href="index.html" class="header__title"
                     >K!sbag Design Studio</a
                 >
@@ -54,13 +54,15 @@
         </section>
         <section class="preview">
             <div class="preview__inner">
-                <h1 class="preview__title">Logo Collection</h1>
-                <p class="preview__subtitle">Solutions & Designs</p>
+                <h1 class="preview__title reveal fade-top">Logo Collection</h1>
+                <p class="preview__subtitle reveal fade-bottom">
+                    Solutions & Designs
+                </p>
             </div>
         </section>
         <section class="logos">
             <div class="container">
-                <div class="logos__inner">
+                <div class="logos__inner reveal fade-bottom">
                     <div class="logo">
                         <img
                             src="./src/images/d1.jpg"
@@ -258,6 +260,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./src/js/animation.js"></script>
         <script src="./src/js/index.js"></script>
     </body>
 </html>
