--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__inner">
+            <div class="header__inner reveal fade-top">
                 <a href="index.html" class="header__title"
                     >K!sbag Design Studio</a
                 >
@@ -54,13 +54,13 @@
         </section>
         <section class="preview">
             <div class="preview__inner">
-                <h1 class="preview__title">Partnerships</h1>
-                <p class="preview__subtitle">Happy Brands</p>
+                <h1 class="preview__title reveal fade-top">Partnerships</h1>
+                <p class="preview__subtitle reveal fade-bottom">Happy Brands</p>
             </div>
         </section>
         <section class="projects">
             <div class="container">
-                <div class="projects__inner">
+                <div class="projects__inner reveal fade-bottom">
                     <div class="project">
                         <div class="project__content">
                             <a href="singleproject.html" class="project__link"
@@ -322,6 +322,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./src/js/animation.js"></script>
         <script src="./src/js/index.js"></script>
     </body>
 </html>
